test/domains/diten/domainReassignAlias2.good
domainReassignAlias2.chpl:7: error: attempt to dereference nil
